Part 4 - Exercise 4.3: Helper Functions and Unit Tests, step 1

--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "deploy": "fly deploy",
+    "logs:prod": "fly logs",
     "dev": "npx nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "node --test"
   },
   "keywords": [],
   "author": "",
