--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "deploy": "fly deploy",
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development npx nodemon index.js",
+    "test": "cross-env NODE_ENV=test node --test",
     "logs:prod": "fly logs",
-    "dev": "npx nodemon index.js",
-    "lint": "eslint .",
-    "test": "node --test"
+    "deploy": "fly deploy",
+    "lint": "eslint ."
   },
   "keywords": [],
   "author": "",
@@ -24,8 +25,10 @@
   "devDependencies": {
     "@eslint/js": "^9.29.0",
     "@stylistic/eslint-plugin": "^4.4.1",
+    "cross-env": "^7.0.3",
     "eslint": "^9.29.0",
     "globals": "^16.2.0",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "supertest": "^7.1.1"
   }
 }
